# mini-healthcare-equipment-api

./: .env.example  .gitignore  README.md  llm_design.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 6033edb7cf56_add_equipment_requests_table.py  d9d55063ee27_create_equipment_and_department_tables.py
app/: __init__.py  main.py
app/api/: dependencies.py  exceptions.py  response.py
app/api/v1/: __init__.py  departments.py  equipment.py  equipment_requests.py
app/core/: config.py  database.py  logger.py  response.py
app/docs/: architecture.md
app/repositories/: __init__.py  department.py  enums.py  equipment.py  equipment_request.py
app/schemas/: ai.py  department.py  equipment.py  equipment_request.py
app/services/: ai_assessment_service.py  department_service.py  equipment_request_service.py  equipment_service.py
tests/: conftest.py  test_equipment_request_rules.py  test_health.py
