[project]
name = "mini-helath-care"
version = "0.1.0"
description = "Mini Healthcare Equipment API using FastAPI, SQLAlchemy, and PostgreSQL/SQLite"
authors = [
    { name = "shinas-sa", email = "shinas.a@simplicitylabs.org" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.129.0,<0.130.0",
    "sqlalchemy>=2.0.46,<3.0.0",
    "alembic>=1.18.4,<2.0.0",
    "asyncpg>=0.31.0,<0.32.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "psycopg2-binary>=2.9.11,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"
ruff = "^0.14.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
